add test sample