@@ -13,8 +13,16 @@ dependencies {
     implementation(libs.androidx.appcompat)
     compileOnly(projects.feature.photoExpose)
     implementation(projects.domain)
-//    testImplementation(projects.core.testing)
 
-
-    androidTestImplementation(libs.bundles.androidx.compose.ui.test)
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockk.agent.jvm)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(libs.junit)
+}
+tasks.withType<Test>().configureEach {
+    useJUnitPlatform() // JUnit5 を使ってる場合のみ
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    jacoco {
+        isEnabled = false // 🔧 MockK使うテストだけ無効化したい場合は条件分岐で
+    }
 }
